--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,24 @@
-HOST=
-USER=
-PASSWORD=
-DATABASE=
-DRIVER=
+DEV_HOST=
+DEV_USER=
+DEV_PASSWORD=
+DEV_DATABASE=
+DEV_DRIVER=
+
+PROD_HOST=
+PROD_USER=
+PROD_PASSWORD=
+PROD_DATABASE=
+PROD_DRIVER=
+
+TEST_HOST=
+TEST_USER=
+TEST_PASSWORD=
+TEST_DATABASE=
+TEST_DRIVER=
+
+SECRET_KEY=
+DEV_DATABASE_URL=
+TEST_DATABASE_URL=
+PROD_DATABASE_URL=
+SALT=
+PORT=
