--- a/package.json
+++ b/package.json
@@ -4,25 +4,36 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
+    "watch": "tsc-watch --onSuccess \"node ./dist/server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
-  "author": "Udacity",
+  "author": "Gerrard Ezeugwa",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.9",
+    "@types/pg": "^7.14.9",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.12",
+    "db-migrate-pg": "^1.2.2",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "typescript": "^4.1.3"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.5.1",
+    "typescript": "^4.1.3",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.2",
+    "@types/validator": "^13.1.3",
     "tsc-watch": "^4.2.9"
   }
 }
