--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "watch": "tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "watch": "yarn clean && tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "watch:dev": "yarn clean && tsc-watch --onSuccess && cross-env NODE_ENV=dev \"node ./dist/server.js\"",
+    "start:dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf dist",
     "tsc": "tsc"
   },
   "author": "Gerrard Ezeugwa",
@@ -16,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "db-migrate": "^0.11.12",
     "db-migrate-pg": "^1.2.2",
     "debug": "^4.3.1",
@@ -34,6 +38,14 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
     "@types/validator": "^13.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9"
   }
 }
