--- a/.env.example
+++ b/.env.example
@@ -2,23 +2,20 @@ DEV_HOST=
 DEV_USER=
 DEV_PASSWORD=
 DEV_DATABASE=
-DEV_DRIVER=
+DEV_DRIVER=pg
 
 PROD_HOST=
 PROD_USER=
 PROD_PASSWORD=
 PROD_DATABASE=
-PROD_DRIVER=
+PROD_DRIVER=pg
 
 TEST_HOST=
 TEST_USER=
 TEST_PASSWORD=
 TEST_DATABASE=
-TEST_DRIVER=
+TEST_DRIVER=pg
 
 SECRET_KEY=
-DEV_DATABASE_URL=
-TEST_DATABASE_URL=
-PROD_DATABASE_URL=
 SALT=
 PORT=
