Complete tests for all endpoints

--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "watch": "yarn clean && tsc-watch --onSuccess \"node ./dist/server.js\"",
-    "watch:dev": "yarn clean && tsc-watch --onSuccess && cross-env NODE_ENV=dev \"node ./dist/server.js\"",
-    "start:dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env NODE_ENV=prod node dist/server.js",
+    "watch": "cross-env NODE_ENV=dev concurrently \"tsc --watch\" \"nodemon",
+    "build": "yarn clean && tsc",
+    "pretest": "yarn setup:test:db && yarn build",
+    "test": "cross-env NODE_ENV=test ts-node ./node_modules/jasmine/bin/jasmine",
     "clean": "rm -rf dist",
-    "tsc": "tsc"
+    "migrate:up": "npx db-migrate up",
+    "migrate:down": "npx db-migrate down",
+    "migrate:reset": "npx db-migrate reset",
+    "setup:test:db": "npx db-migrate reset -e test && npx db-migrate up -e test",
+    "tsc": "tsc",
+    "lint": "npx eslint . --ext .ts"
   },
   "author": "Gerrard Ezeugwa",
   "license": "ISC",
@@ -35,14 +41,21 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
+    "@types/jasmine": "^3.6.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.28",
+    "@types/request": "^2.48.5",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "axios": "^0.21.1",
+    "concurrently": "^5.3.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "jasmine": "^3.6.4",
+    "jasmine-ts": "^0.3.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
