--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
     "root": true,
-    "extends": ["plugin:@typescript-eslint/recommended", "prettier/@typescript-eslint"],
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:@typescript-eslint/recommended", "prettier/@typescript-eslint"],
     "env": {
       "browser": true,
       "node": true,
