--- a/.env.example
+++ b/.env.example
@@ -2,20 +2,23 @@ DEV_HOST=
 DEV_USER=
 DEV_PASSWORD=
 DEV_DATABASE=
+DEV_PORT=
 DEV_DRIVER=pg
 
 PROD_HOST=
 PROD_USER=
 PROD_PASSWORD=
 PROD_DATABASE=
+PROD_PORT=
 PROD_DRIVER=pg
 
 TEST_HOST=
 TEST_USER=
 TEST_PASSWORD=
 TEST_DATABASE=
+TEST_PORT=
 TEST_DRIVER=pg
 
 SECRET_KEY=
 SALT=
-PORT=
+PORT=5000
